  * ia64 does not support rarp, remove from manual. Closes: #250028
  * Document deconf-set-selections -c to check preseed files. Closes: #284289
  * Try to pass appropriate manual_release when building the manual in rules
    file.
  * Switch to slang2.
  * Switch from busybox-cvs to busybox.
  * New busybox supports 2.6 modules, so the hack with modutils-udeb is not
    needed anymore.

  [ Kurt Roeckx ]
  * Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
    package list. Closes: #306976
  * Change amd64 kernel from 2.6.8-10 to 2.6.8-11.
  * Do not install nano in the monolithic target.
  [ Christian Perrier ]
  * Add the list of needed characters for Kazakh
  * Add the list of needed characters for Vietnamese
  * Add the list of needed characters for Wolof

  [ Colin Watson ]
  * Force HOME=$(TEMP) for hfsutils calls throughout powerpc
    hd_media_common target.
  * Ship yaboot with powerpc hd-media images.
  * Add rescue stanzas to yaboot configuration files.
  * Document raised kernel command-line limits in 2.6.9.
  * Remove devfs=mount from yaboot configuration files. It shouldn't be
    needed any more.
  * Don't remove modules.*map from the initrd if we're using real hotplug.
  * Use the kernel-specific discover and isa-pnp-modules include files
    rather than explicitly listing those udebs throughout pkg-lists.
  * Make a note about another possible cause for 'locale charmap' being
    wrong during font generation, since it confused me for days ...
  * Document new-style timezone preseeding, available from base-config
    2.65.
  * Document rescue mode in the manual.
  * Remove historic manual files from (variously) woody and the old build
    system.
  * Copy KEYRING into the initrd, as /usr/share/keyrings/archive.gpg. I'm
    relying on the keyring being small here, although we should really have
    a keyring udeb instead.
  * Build-depend on gnupg; apt requires it to verify signatures.

  [ Frans Pop ]