@@ -80,6 +80,7 @@ TEMP_MINIISO = $(TEMP)/mini.iso
 TEMP_EXTRA = $(TEMP)/$(EXTRANAME).img
 TEMP_BOOT_SCREENS = $(TEMP)/boot_screens
 TEMP_NETBOOT_DIR = $(TEMP)/dir_tree
+TEMP_CD_INFO_DIR = $(TEMP)/cd_info
 TEMP_CD_TREE = $(TEMP)/cd_tree
 TEMP_POWERPC_INITRD = $(TEMP)/powerpc_initrd_tree
 
