@@ -106,6 +106,8 @@ debian-installer (20050630) UNRELEASED; urgency=low
   * Switch from busybox-cvs to busybox.
   * New busybox supports 2.6 modules, so the hack with modutils-udeb is not
     needed anymore.
+  * Add isolinux.cfg files to the debian-cd-into tarball, so that we
+    don't have to maintain the same stuff in debian-cd.
 
   [ Kurt Roeckx ]
   * Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
